--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -411,7 +411,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                         {{:helper.string('<span class="{0}">{1}%</span>', data.aircontents.carbon_dioxide > 5 ? 'bad' : 'good' , data.aircontents.carbon_dioxide)}}
                     </div>
                     <div class="itemLabel">
-                        Plasma:
+                        Phoron:
                     </div>
                     <div class = "itemContent">
                         {{:helper.string('<span class="{0}">{1}%</span>', data.aircontents.plasma  > 0 ? 'bad' : 'good' , data.aircontents.plasma)}}
